--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
 <ng-container [formGroup]="registration">
   <ng-container *ngFor="let field of fields">
-    <dynamic-input [props]="field"></dynamic-input>
+    <dynamic-field [props]="field"></dynamic-field>
   </ng-container>
 </ng-container>
 <div>
